--- a/templates/pro/index.html.twig
+++ b/templates/pro/index.html.twig
@@ -3,5 +3,10 @@
 {% block title %}Espace pro | Bienvenue!{% endblock %}
 
 {% block body %}
-
+<div class="container mt-5">
+<h4>Accueil dashboard pro:</h4>
+<p>- état des ventes et paiements sur le mois en cours par exemple</p>
+<p>- liste de mes entreprises (si pas d'entreprise, propose d'en créer une)</p>
+<p>- si plusieurs entreprises, le choix de l'une d'entre elle est le point de départ de tout le reste (clients, devis, factures, paiements, etc...)</p>
+</div>
 {% endblock %}
