change pages titles

--- a/templates/account/index.html.twig
+++ b/templates/account/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccountController!{% endblock %}
+{% block title %}Mon compte | Symfacture{% endblock %}
 
 {% block body %}
 mon compte
