--- a/templates/pro/customer/index.html.twig
+++ b/templates/pro/customer/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello CustomerController!{% endblock %}
+{% block title %}Espace pro | Mes clients{% endblock %}
 
 {% block body %}
 espace pro - liste de mes clients
