--- a/templates/pro/invoice/index.html.twig
+++ b/templates/pro/invoice/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello InvoiceController!{% endblock %}
+{% block title %}Espace pro | Mes factures{% endblock %}
 
 {% block body %}
 espace pro - liste des mes factures
