--- a/templates/pro/quote/index.html.twig
+++ b/templates/pro/quote/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello QuoteController!{% endblock %}
+{% block title %}Espace pro | Mes devis{% endblock %}
 
 {% block body %}
 espace pro - liste de mes devis
